# plantmodel

./: .gitignore  CMakeLists.txt  output.txt  readme.MD  sim_log.csv
config/: default.config
data/literature/index/: literature_harvest_checklist.md
data/literature/processed/fairdom_complete_data/lh2/Laurel and Hardy 2 - complete data/: Biomass L&H Nov.xlsx  Gas exchange L&H Nov.xlsx  Leaf number L&H Nov.xlsx  Metabolite_Data_(Golm_20-04-2015) (LH2)_YH.xlsx
data/literature/processed/fairdom_complete_data/lh3/Laurel and Hardy 3 - complete data/: Biomass L&H Mar 2015.xlsx  Gas exchange L&H Mar 2015.xlsx  Leaf number L&H Mar 2015.xlsx  Metabolite_Data_(Golm_02-09-2015) (LH3).xlsx
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/: metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/.ro/: manifest.json
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1593-timet-wp1-1-qrt-pcr-ld-to-ll-and-dd/: metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1594-p2011-1-2-simulations-of-clock-genes-under-ld-cycl/: metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1595-p2011-1-2-simulations-vs-data-for-wt-normalised-fo/: SBSI plots final.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1597-p2011-1-2-simulations-and-data-in-prr7-prr9-mutant/: SBSI 79 plots final.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1598-timet-wp1-1a-metabolite-data-ed-en-in-clock-mutant/: Clock mutant ED-EN LC-MS data from AnnaF_stats_2.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1604-laurel-and-hardy-1-experimental-data-mat-file/: LH1_data.mat  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1605-laurel-and-hardy-1-simulation-data-mat-file/: metadata.json  metadata.rdf  plot_LH1_biomass_and_carbon_pools.mat
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1606-laurel-and-hardy-2-experimental-data-mat-file/: LH2_data.mat  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1607-laurel-and-hardy-3-experimental-data-mat-file/: LH3_data.mat  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1608-laurel-and-hardy-2-simulation-data-mat-file/: metadata.json  metadata.rdf  plot_LH2_biomass_and_carbon_pools.mat
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1609-laurel-and-hardy-3-simulation-data-mat-file/: metadata.json  metadata.rdf  plot_LH3_biomass_and_carbon_pools.mat
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1610-sensitivity-analysis-results-mat-file/: metadata.json  metadata.rdf  sens_analysis_results_WT.mat
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1612-flowering-time-in-wt-vs-prr7prr9-nakamichi-et-al-2/: metadata.json  metadata.rdf  nakamichi2007_WT_vs_prr7prr9_flowering_data.xlsx
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1613-hypocotyl-lengths-in-wt-vs-prr7prr9-across-photope/: metadata.json  metadata.rdf  niwa2009_WT_vs_prr7prr9_hypocotyl_data.xlsx
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1616-laurel-and-hardy-1-experimental-data-excel/: LH1_experimental_data.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1621-laurel-and-hardy-2-experimental-data-excel/: Laurel and Hardy 2 - experimental data (excel).xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1622-laurel-and-hardy-3-experimental-data-excel/: Laurel and Hardy 3 - experimental data (excel).xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1626-laurel-and-hardy-3-complete-data/: metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/1627-laurel-and-hardy-2-complete-data/: metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/5002-laurel-and-hardy-1-mean-data-and-simulations/: Laurel and Hardy 1_DDS.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/5003-laurel-and-hardy-2-mean-data-and-simulations/: Laurel and Hardy 2 with malate and fumarate_DDS.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/5004-laurel-and-hardy-3-mean-data-and-simulations/: Laurel and Hardy 3 with malate and fumarate_DDS.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/5005-four-study-data-compilation-with-charts/: Biomass_FW_DW_gas_exchange_data.xlsx  metadata.json  metadata.rdf
data/literature/raw/fairdom_fmv2_snapshot_inv123_s1/data_files/5006-all-biomass-data-for-study-gibberellins-1/: GA_Biomass of full sets_AJM.xlsx  metadata.json  metadata.rdf
docs/superpowers/specs/: 2026-05-13-plant-model-solver-api-refactor-design.md
include/: model.h  runge_cutta.h
include/config/: config.h
include/export/: export.h
include/gui/: plot.h
include/model/: algebraic.h  environment.h  input.h  model.h  outputs.h  parameters.h  photo_surrogate.h  photo_surrogate_export.h  state.h  surrogate_model_ph.h
include/simulation/: dynamics.h  observers.h  runge_cutta.h  simulation.h
include/simulation/solver/: ODE45.h  RKF78.h  runge_cutta.h  solver.h
src/: main.c  model.c  runge_kutta.c  simulation.c
src/config/: config.c  input_field_map.inc
src/export/: export.c
src/gui/: plot.c
src/model/: algebraic.c  carbohydrates.c  environment.c  growth.c  input.c  model.c  nutrients.c  outputs.c  parameters.c  photo_surrogate.c  photosynthesis.c  state.c
src/simulation/: dynamics.c  observers.c  runge_kutta.c  simulation.c
src/simulation/solver/: ODE45.c  RKF78.c  runge_kutta.c  solver.c
tests/: param_sweep.c  test.c  test_model_state.c
tools/: sweep_runner.c  validation_runner.c
(+90 files in other folders)
